fixed the alignment on the small icon button

--- a/Button/Button.module.less
+++ b/Button/Button.module.less
@@ -148,12 +148,6 @@
 			.margin-start-end(@sand-button-icon-small-margin-start, @sand-button-icon-small-margin-end);
 		}
 
-		&.iconAfter {
-			.icon {
-				.margin-start-end(@sand-button-icon-position-after-small-margin-start, @sand-button-icon-position-after-small-margin-end);
-			}
-		}
-
 		&.red,
 		&.green,
 		&.yellow,
